# signate_gis_data_challenge_1

./: pyproject.toml
notebook/: data_check.ipynb
