[tool.poetry]
name = "signate-gis-data-challenge-1"
version = "0.1.0"
description = ""
authors = ["akatsuki7211 <akatsuki271828182846@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
lightgbm = "^4.5.0"
signate = "^0.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
